<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/transport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_background"
        android:orientation="vertical"
        android:padding="30dp">

        <LinearLayout
            android:id="@+id/input_distance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="48dp"
                android:autofillHints="0"
                android:elegantTextHeight="true"
                android:ems="10"
                android:hint="@string/distance"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/img_transport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_voiture"
                android:layout_width="0dp"
                android:layout_height="67dp"
                android:layout_weight="2"
                android:contentDescription="@string/car"
                android:src="@drawable/ic_car"
                />

            <ImageView
                android:id="@+id/img_train"
                android:layout_width="0dp"
                android:layout_height="67dp"
                android:layout_weight="2"
                android:contentDescription="@string/train"
                android:src="@drawable/ic_train" />

            <ImageView
                android:id="@+id/img_avion"
                android:layout_width="0dp"
                android:layout_height="67dp"
                android:layout_weight="2"
                android:contentDescription="@string/plane"
                android:src="@drawable/ic_plane" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <LinearLayout
            android:id="@+id/input_nb_mail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/nb_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="0"
                android:elegantTextHeight="true"
                android:ems="10"
                android:hint="@string/mail"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oneMo"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fiveMo"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/img_mail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/mail"
                android:src="@drawable/ic_mail"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/visio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_background"
        android:orientation="vertical"
        android:padding="30dp">

        <LinearLayout
            android:id="@+id/input_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="0"
                android:elegantTextHeight="true"
                android:ems="10"
                android:hint="@string/time"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/sec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutes"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img_visio"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:contentDescription="@string/visio"
            android:src="@drawable/ic_visio"/>

    </LinearLayout>

</LinearLayout>
