<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/item_margin">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_item"
            android:contentDescription="@string/car"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_car" />

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view_separation"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:visibility="invisible"/>

    <TextView
        android:id="@+id/act_name"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_margin"
        android:text="@string/act_name"
        app:layout_constraintBottom_toTopOf="@id/view_separation"
        app:layout_constraintStart_toEndOf="@+id/cardView" />

    <TextView
        android:id="@+id/act_desc"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_description"
        app:layout_constraintStart_toStartOf="@+id/act_name"
        app:layout_constraintTop_toBottomOf="@+id/view_separation" />

    <ImageView
        android:id="@+id/delete_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_delete"
        android:layout_marginEnd="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        android:contentDescription="@string/delete" />

</androidx.constraintlayout.widget.ConstraintLayout>