<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/default_margin"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/compare_car_input"
            style="@style/DefaultTextStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"            android:layout_weight="0.7"
            android:hint="@string/Distance_in_km"
            android:inputType="numberDecimal"
            android:paddingLeft="@dimen/default_margin"
            tools:ignore="DuplicateSpeakableTextCheck" />
        <ImageButton
            android:id="@+id/compare_car_submit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:src="@drawable/ic_car"
            android:background="@null"
            android:contentDescription="icon1"
            android:onClick="onAddActivityCarSubmitClick"
            android:scaleType="fitCenter"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/compare_train_input"
            android:layout_width="0dp"
            android:layout_height="60dp"            android:layout_weight="0.7"
            android:hint="@string/Distance_in_km"
            android:paddingLeft="@dimen/default_margin"
            style="@style/DefaultTextStyle"
            android:layout_marginTop="@dimen/item_margin"
            android:inputType="numberDecimal"
            />

        <ImageButton
            android:id="@+id/compare_train_submit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:src="@drawable/ic_train"
            android:layout_marginTop="@dimen/item_margin"
            android:contentDescription="icon2"
            android:background="@null"
            android:onClick="onAddActivityTrainSubmitClick"
            android:scaleType="fitCenter"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/compare_plane_input"
            android:layout_width="0dp"
            android:layout_height="60dp"            android:layout_weight="0.7"
            android:hint="@string/Distance_in_km"
            android:paddingLeft="@dimen/default_margin"
            style="@style/DefaultTextStyle"
            android:layout_marginTop="@dimen/item_margin"
            android:inputType="numberDecimal"
            />
        <ImageButton
            android:id="@+id/compare_plane_submit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:src="@drawable/ic_plane"
            android:layout_marginTop="@dimen/item_margin"
            android:contentDescription="icon3"
            android:background="@null"
            android:onClick="onAddActivityPlaneSubmitClick"
            android:scaleType="fitCenter"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/compare_mail_input"
            android:layout_width="0dp"
            android:layout_height="60dp"            android:layout_weight="0.7"
            android:hint="@string/Number_of_mail"
            android:paddingLeft="@dimen/default_margin"
            style="@style/DefaultTextStyle"
            android:layout_marginTop="@dimen/item_margin"
            android:inputType="number"
            />
        <ImageButton
            android:id="@+id/compare_mail_submit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:src="@drawable/ic_mail"
            android:layout_marginTop="@dimen/item_margin"
            android:contentDescription="icon4"
            android:background="@null"
            android:onClick="onAddActivityMailSubmitClick"
            android:scaleType="fitCenter"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/with_attachment"
            style="@style/DefaultTextStyle"/>

        <RadioButton
            android:id="@+id/compare_mail_OneMo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oneMo"/>

        <RadioButton
            android:id="@+id/compare_mail_FiveMo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fiveMo"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/compare_visio_input"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="0.7"
            android:hint="@string/Time_spent_in_minutes"
            android:paddingLeft="@dimen/default_margin"
            style="@style/DefaultTextStyle"
            android:inputType="number"
            />
        <ImageButton
            android:id="@+id/compare_visio_submit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:src="@drawable/ic_visio"
            android:contentDescription="icon5"
            android:background="@null"
            android:onClick="onAddActivityVisioSubmitClick"
            android:scaleType="fitCenter"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/darkGreen"
        android:layout_marginTop="@dimen/item_margin"
        android:paddingHorizontal="@dimen/item_margin"
        android:paddingVertical="@dimen/item_margin"
        android:gravity="center">

        <TextView
            android:id="@+id/compare_act1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/compare_enter_an_activity"
            android:paddingHorizontal="@dimen/item_margin"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14dp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:text="@string/compare_vs"
            android:paddingHorizontal="@dimen/item_margin"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/compare_act2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/compare_enter_an_activity"
            android:paddingHorizontal="@dimen/item_margin"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14dp"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/item_margin"
        android:paddingVertical="@dimen/item_margin">

        <TextView
            android:id="@+id/compare_act1_CO2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:hint="@string/compare_act1"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/compare_delete_act1"
            android:contentDescription="icon_suppr_act1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/light_red"
            android:minWidth="30dp"
            android:minHeight="30dp"
            android:src="@drawable/ic_suppress"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compare_vs"
            android:paddingHorizontal="@dimen/item_margin"
            />

        <TextView
            android:id="@+id/compare_act2_CO2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/compare_act2"
            android:paddingHorizontal="10dp"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/compare_delete_act2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/light_red"
            android:contentDescription="icon_suppr_act2"
            android:minWidth="30dp"
            android:minHeight="30dp"
            android:src="@drawable/ic_suppress"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

</LinearLayout>
